@@ -51,7 +51,7 @@ SEL java_ensure_selector (JNIEnv *env, jobject jsel);
 #define JFINDOBJCMETHOD(env, jobj) (java_ensure_selector (env, jobj))
 
 const char *java_copy_string (JNIEnv *env, jstring javaString);
-void java_cleanup_strings (JNIEnv *env, const char **stringArray);
+void java_cleanup_strings (JNIEnv *env, const char **stringArray, size_t count);
 
 #define COPYSTRING(env, javaString) java_copy_string (env, javaString)
-#define CLEANUPSTRINGS(env, stringArray) java_cleanup_strings (env, stringArray)
+#define CLEANUPSTRINGS(env, stringArray) java_cleanup_strings (env, stringArray, sizeof (stringArray) / sizeof (const char *))
