@@ -1,3 +1,8 @@
+1999-04-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* directory.m (java_cleanup_strings, java_copy_string): Implement.
+	Strings are copied to the heap (only) for the duration of the call.
+
 1999-04-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* directory.h (COPYSTRING, CLEANUPSTRINGS): New macros.
